--- a/todolist.html
+++ b/todolist.html
@@ -17,11 +17,21 @@
         <h1>TO DO LIST</h1>
         <form class="form" action="#" method="post">
           <label for="champ">Ajouter un événement</label>
-          <input id="elemlist" type="text" placeholder="pomme" />
+          <input
+            id="elemlist"
+            type="text"
+            placeholder="Inscrivez votre événement"
+          />
           <button id="ajouter" type="submit">Ajouter</button>
         </form>
       </div>
-      <div class="result"></div>
+      <div class="result">
+        <p>
+          Hop Hop Hop
+          <button type="submit" class="SUP">X</button>
+          <button type="submit" class="MOD">Modifier</button>
+        </p>
+      </div>
     </div>
     <!--MARGE DROITE-->
     <div class="droite"></div>
