--- a/todolist.html
+++ b/todolist.html
@@ -14,13 +14,23 @@
     <!--CORPS-->
     <div class="corps">
       <div class="cadre">
-        <h1>TO DO LIST</h1>
+        <h1>
+          <span>T</span>
+          <span>O</span>
+          <span>D</span>
+          <span>O</span>
+          <span>L</span>
+          <span>I</span>
+          <span>S</span>
+          <span>T</span></h1>
         <form class="form" action="#" method="post">
-          <label for="champ">Ajouter un événement</label>
+          <label for="champ">Ajouter une tâche</label>
           <input
+            
             id="elemlist"
             type="text"
-            placeholder="Inscrivez votre événement"
+            placeholder="écrivez ici"
+            required
           />
           <button id="ajouter" type="submit">Ajouter</button>
         </form>
